--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.2.4",
+    "mongoose": "^5.5.6",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^5.8.5"
